# conan-clangcl-noruntime-demo

./: Dockerfile  README.md  build  clang-cl
autotools/: conanfile.py  configure.ac
autotools/src/: Makefile.am  mypkg.cpp  mypkg.h
autotools/test_package/: conanfile.py
cmake/: CMakeLists.txt  conanfile.py
cmake/src/: mypkg.cpp
cmake/test_package/: CMakeLists.txt  conanfile.py
cmake/test_package/src/: example.cpp
dependency/: CMakeLists.txt  conanfile.py
dependency/include/: dependency.h
dependency/src/: dependency.cpp
results/: conan_toolchain.cmake  conanautotoolsdeps.sh  conanautotoolstoolchain.sh
